--- a/style.css
+++ b/style.css
@@ -4,20 +4,77 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+/* Common */
 .clear {
     clear: both;
 }
 .text-white{
     color: #fff !important;
 }
+
+.text-center{
+    text-align: center !important;
+}
+
 html {
     font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
 }
 
-#main {
-
+.btn{
+    color: #fff;
+    background-color: #000;
+    text-decoration: none;
+    padding: 11px 16px;
+    margin-top: 15px;
+    display: inline-block;
+    border: none;
 }
+
+.row{
+    margin-left: -8px;
+    margin-right: -8px;
+}
+
+.row::after{
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.pull-right{
+    float: right !important;
+}
+
+.col{
+    float: left;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.col-full{
+    width: 100%;
+}
+
+.col-half{
+    width: calc(100%/2);
+}
+
+.col-third{
+    width: calc(100%/3);
+}
+
+.mt-8{
+    margin-top: 8px !important;
+}
+
+.mt-16{
+    margin-top: 16px !important;
+}
+/* Main */
+/* #main {
+
+} */
 
 #header {
     height: 46px;
@@ -134,7 +191,7 @@ html {
     width: 800px;
     margin-left: auto;
     margin-right: auto;
-    padding: 64px 0;
+    padding: 64px 0 112px;
 }
 
 #content .session-heading{
@@ -159,12 +216,6 @@ html {
 
 #content .member-lists{
     margin-top: 48px;
-}
-
-#content .member-item{
-    float:left;
-    width: calc(100%/3);
-    text-align: center;
 }
 
 #content .member-name{
@@ -216,14 +267,7 @@ html {
 /* Place */
 
 .place-list{
-    margin: 32px -8px 0;
-    padding-bottom: 48px;
-}
-
-.place-item{
-    float: left;
-    width: calc(100%/3);
-    padding: 0 8px;
+    margin-top: 32px;
 }
 
 .place-img{
@@ -254,24 +298,72 @@ html {
     margin-top: 15px;
     line-height: 1.4;
 }
-.place-buy-btn{
-    color: #fff;
-    background-color: #000;
-    text-decoration: none;
-    padding: 11px 16px;
-    margin-top: 15px;
-    display: inline-block;
-}
 
-.place-buy-btn:hover{
+.btn:hover{
     color: #000;
     background-color: #ccc;
+    cursor: pointer;
+}
+
+/* Contact form */
+
+.contact-content{
+    margin-top: 48px;
+}
+
+.contact-info{
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.contact-info i[class*="ti-"]{
+    width: 30px;
+    display: inline-block !important;
+}
+
+.contact-form{
+    font-size: 15px;
+}
+
+.contact-form .form-control{
+    font-size: 15px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    width: 100%;
+}
+
+/* Map-Section  */
+
+.map-section img{
+    width: 100%;
 }
 /* Footer Session */
 #footer {
-
+    padding: 64px 16px;
+    text-align: center;
 }
 
+#footer .social-list{
+    font-size: 24px;
+}
+
+#footer .social-list a{
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.6);
+}
+#footer .copy-right a:hover,
+#footer .social-list a:hover{
+    color: rgba(0, 0, 0, 0.4);
+}
+
+#footer .copy-right{
+    margin-top: 15px;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+#footer .copy-right a{
+    color: rgba(0, 0, 0, 0.6);
+}
 
 .modal{
     position: fixed;
