--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html {
     margin-top: 15px;
     display: inline-block;
     border: none;
+    text-align: center;
 }
 
 .row{
@@ -70,6 +71,10 @@ html {
 
 .mt-16{
     margin-top: 16px !important;
+}
+
+.mt-32{
+    margin-top: 32px !important;
 }
 /* Main */
 /* #main {
@@ -146,16 +151,29 @@ html {
     font-size: 14px;
 }
 
+#header .mobile-menu-btn{
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: none;
+}
+
+#header .mobile-menu-btn,
 #header .search-btn{
     float: right;
     padding: 0 21px;
 }
 
+
 #header .search-btn:hover{
-    background-color: #f44336;
-    cursor: pointer;
+    background-color: #ccc;
 }
 
+#header .mobile-menu-btn:hover .menu-icon{
+    color: #000;
+}
+
+#header .menu-icon,
 #header .search-icon{
     color: #fff;
     font-size: 20px;
@@ -187,11 +205,17 @@ html {
     margin-top: 25px;
 }
 
-#content {
+/* #content {
+} */
+
+#content .content-session{
     width: 800px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     padding: 64px 0 112px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 #content .session-heading{
@@ -215,7 +239,7 @@ html {
 }
 
 #content .member-lists{
-    margin-top: 48px;
+    margin-top: 32px;
 }
 
 #content .member-name{
@@ -267,7 +291,7 @@ html {
 /* Place */
 
 .place-list{
-    margin-top: 32px;
+    margin-top: 16px;
 }
 
 .place-img{
